--- a/src/tailwind.css
+++ b/src/tailwind.css
@@ -2,17 +2,31 @@
 @tailwind components;
 @tailwind utilities;
 
-/* group utility */
+@layer components {
 
-.btn {
-    @apply px-4 py-1 border rounded-full text-sm font-semibold hover:text-white hover:border-transparent focus:outline-none focus:ring-2 focus:ring-offset-2
-    @apply p-2
+    /* group utility */
+    .btn {
+        @apply px-4 py-1 border rounded-full text-sm font-semibold hover:text-white hover:border-transparent focus:outline-none focus:ring-2 focus:ring-offset-2;
+        @apply p-2;
+    }
+
+    .btn-purple {
+        @apply border-purple-200 text-purple-600 hover:bg-purple-600 focus:ring-purple-600;
+    }
+
+    .btn-green {
+        @apply border-green-200 text-green-600 hover:bg-green-600 focus:ring-green-600;
+    }
 }
 
-.btn-purple {
-    @apply border-purple-200 text-purple-600 hover:bg-purple-600 focus:ring-purple-600
+@layer base {
+    h1 {
+        @apply text-2xl
+    }
 }
 
-.btn-green {
-    @apply border-purple-200 text-green-600 hover:bg-green-600 focus:ring-green-600
+@layer utilities {
+    .text-body {
+        font-size: 12px;
+    }
 }
